k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: fastapi-service

spec:
  selector:
    app: fastapi

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: LoadBalancer
